<resources>
    <string name="app_name">AndroidX</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_search">Search</string>
    <string name="nav_item1">item1</string>
    <string name="nav_item2">item2</string>
    <string name="nav_item3">item3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toggle">Toggle</string>
    <string name="bottom_sheet_email">example@xmail.com</string>
    <string name="bottom_sheet_name">Nazifa Anis Mahin</string>
    <string name="default_notification_channel_id">androidX_channel_id</string>
    <string name="password">Password</string>
    <string name="prefs_theme_key">theme</string>
</resources>
