<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_mail"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_delete"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_archieve"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"/>

    <!--<item
        android:id="@+id/app_bar_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/title_more"
        app:showAsAction="ifRoom"/>-->

</menu>