<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:title="Communicate"
        tools:ignore="HardcodedText">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav12"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_item2" />
                <item
                    android:id="@+id/nav13"
                    android:icon="@drawable/ic_notifications_black_24dp"
                    android:title="@string/nav_item3" />
                <item
                    android:id="@+id/nav14"
                    android:icon="@drawable/ic_reply_white_24dp"
                    android:title="@string/nav_item2" />

            </group>
        </menu>
    </item>

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/nav1"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/nav_item1" />
                <item
                    android:id="@+id/nav2"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_item2" />
                <item
                    android:id="@+id/nav3"
                    android:icon="@drawable/ic_notifications_black_24dp"
                    android:title="@string/nav_item3" />
                <item
                    android:id="@+id/nav4"
                    android:icon="@drawable/ic_reply_white_24dp"
                    android:title="@string/nav_item2" />
                <item
                    android:id="@+id/nav5"
                    android:icon="@drawable/ic_search_white_24dp"
                    android:title="@string/nav_item3" />
                <item
                    android:id="@+id/nav6"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/nav_item1" />
                <item
                    android:id="@+id/nav7"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_item2" />
                <item
                    android:id="@+id/nav8"
                    android:icon="@drawable/ic_notifications_black_24dp"
                    android:title="@string/nav_item3" />
                <item
                    android:id="@+id/nav9"
                    android:icon="@drawable/ic_reply_white_24dp"
                    android:title="@string/nav_item2" />
                <item
                    android:id="@+id/nav10"
                    android:icon="@drawable/ic_menu_white_24dp"
                    android:title="@string/nav_item3" />
                <item
                    android:id="@+id/nav11"
                    android:icon="@drawable/ic_dashboard_black_24dp"
                    android:title="@string/nav_item1" />
                <item
                    android:id="@+id/nav15"
                    android:icon="@drawable/ic_search_white_24dp"
                    android:title="@string/nav_item2" />

                <!-- last item is not showing...
                -->

            </group>

        </menu>
    </item>

</menu>